@startuml

title __SERVICE's Class Diagram__\n

  namespace  {
    namespace om.app.blockchain {
      namespace service {
        class com.app.blockchain.service.BlockService {
            + BlockService()
            + compareBlockChain()
            + createBlock()
            + getLastBlock()
            + listAllBlocks()
            + longestChain()
            + saveBlock()
            + saveBlockChain()
            + validateBlock()
        }
      }
    }
  }
  

  namespace  {
    namespace om.app.blockchain {
      namespace service {
        interface com.app.blockchain.service.IBlockService {
            {abstract} + compareBlockChain()
            {abstract} + createBlock()
            {abstract} + getLastBlock()
            {abstract} + listAllBlocks()
            {abstract} + saveBlock()
        }
      }
    }
  }
  

  namespace  {
    namespace om.app.blockchain {
      namespace service {
        interface com.app.blockchain.service.INodeService {
            {abstract} + addNode()
            {abstract} + getUrlNodes()
            {abstract} + sendBlockNetwork()
        }
      }
    }
  }
  

  namespace  {
    namespace om.app.blockchain {
      namespace service {
        class com.app.blockchain.service.NodeService {
            - restTemplate : RestTemplate
            + NodeService()
            + addNode()
            + getUrlNodes()
            + listAllNodes()
            + sendBlockNetwork()
            + validateNode()
        }
      }
    }
  }
  

  com.app.blockchain.service.BlockService .up.|> com.app.blockchain.service.IBlockService
  com.app.blockchain.service.BlockService o-- com.app.blockchain.repository.IBlockRepository : blockRepository
  com.app.blockchain.service.NodeService .up.|> com.app.blockchain.service.INodeService
  com.app.blockchain.service.NodeService o-- com.app.blockchain.service.IBlockService : blockService
  com.app.blockchain.service.NodeService o-- com.app.blockchain.repository.INodeRepository : nodeRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
